fix(header): added nowrap for address

--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,7 @@
   grid-column: 7 / -1;
   display: flex;
   flex-direction: column;
+  text-wrap: nowrap;
   justify-content: center;
   justify-self: end;
   line-height: 1.35;
